<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">KLog app main user interface.</string>
    <string name="main_activity_title">KLogApp Main Interface</string>
    <string name="app_name">KLogApp</string>

    <string name="camera_service_activate">Camera service</string>
    <string name="camera_service_name">Camera Service</string>
    <string name="camera_service_pic_mode">Rapid pictures</string>
    <string name="camera_service_video_mode">Video-based</string>
    <string name="upload_service_activate">Upload service</string>
    <string name="upload_service_name">Upload service</string>
    <string name="command_service_activate">Command service</string>

    <string name="action_exit">Exit</string>

    <string name="msg_access_local">Open at local: </string>
    <string name="msg_access_internet">Open at internet:  </string>
    <string name="msg_access_query">Detecting internet ... </string>
    <string name="msg_access_query_error">Also you can setup your router to access from internet</string>
    <string name="msg_error">Error: Please enable wifi</string>

</resources>
